--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Oraichain Labs",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "big-json": "^3.2.0"
+  }
 }
